# TextSim

./: .gitignore  CMakeLists.txt  README.md  todo.txt
app/: main.cpp
app/chat/: chat.cpp  chat.hpp  json_format.txt  style.hpp
app/client/: AppClient.cpp  AppClient.hpp  client.cpp
app/config/: config.cpp  config.hpp
app/cryptography/: base64.cpp  base64.hpp  keys.hpp  rsa.cpp  rsa.hpp  sha256.cpp  sha256.hpp
app/server/: AppServer.cpp  AppServer.hpp
app/services/: services.cpp  services.hpp
test/: http.rest
textsim-gui2/: package-lock.json  package.json
textsim-gui2/src/: App.css  App.tsx
textsim-gui2/src-tauri/: Cargo.toml  tauri.conf.json
textsim-gui2/src-tauri/icons/: icon.icns
textsim-gui2/src-tauri/src/: main.rs
textsim-gui2/src/components/MainContent/: MainContent.css  MainContent.tsx
textsim-gui2/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
textsim-gui2/src/components/views/Chat/: ChatView.css  ChatView.tsx
textsim-gui2/src/components/views/ConnSettings/: ConnectionSettingsView.tsx
textsim-gui2/src/components/views/Log/: LogView.css  LogView.tsx
textsim-gui2/src/components/views/Manual/: ManualView.css  ManualView.tsx
textsim-gui2/src/components/views/Server/: ServerView.css  ServerView.tsx
textsim-gui2/src/components/views/UserSettings/: UserSettingsView.css  UserSettingsView.tsx
